--- a/index.html
+++ b/index.html
@@ -18,10 +18,31 @@
             </div>
         </div>
     </header>
+    <section class="row contenedor">
+      
+    </section>
+    <section class="d-none">
+      <div class="col-sm-12 col-md-6 col-lg-3 molde-personaje mb-3 mt-3">
+        <div class="card">
+          <div class="card-header bg-dark bg-gradient text-white">
+            <span class="card-title nombre-titulo">Aqui el nombre del personaje</span>
+          </div>
+          <div class="card-body text-center">
+            <img src="" class="img-fluid imagen-personaje">
+          </div>
+          <div class="card-footer">
+            <div class="d-grid gap-2 col-12 mx-auto">
+              <button class="btn btn-block btn-info btn-personaje">Ver Personaje</button>    
+            </div>                           
+          </div>
+        </div>
+      </div>
+    </section>
 
     
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.0-alpha3/dist/js/bootstrap.bundle.min.js" integrity="sha384-popRpmFF9JQgExhfw5tZT4I9/CI5e2QcuUZPOVXb1m7qUmeR2b50u+YFEYe1wgzy" crossorigin="anonymous"></script>
     <script src="https://cdn.jsdelivr.net/npm/axios/dist/axios.min.js"></script>
+    <script src="https://cdn.jsdelivr.net/npm/sweetalert2@10"></script>
     <script src="js/init.js"></script>
     <!-- TODO: Agregar el service worker -->
   </body>
